@@ -57,6 +57,12 @@
     <div class="field">
       <%= f.label :call_type %><br />
       <%= f.select :call_type, [['---', nil]] + Choice.where(category: 'call type').collect{|c| [c.name, c.id]} %>
+      <%= javascript_tag do %>
+        window.choices = {};
+        <% Choice.where(category: 'call type').each do |c| %>
+          window.choices['<%= c.id %>'] = <%= c.fields.collect{|f| "#call_#{f}"}.to_json.html_safe %>;
+        <% end %>
+      <% end %>
     </div>
 
     <div class="field">
@@ -124,6 +130,12 @@
 
 <%= javascript_tag do %>
   $(function(){
+    window.toggle_fields = <%= Call::TOGGLE_FIELDS.collect{|f| "#call_#{f}"}.to_json.html_safe %>;
+    window.show_fields = [];
+    updateFields($('#call_call_type'));
+    $('#call_call_type').change(function() {
+      updateFields($(this));
+    });
     $.post($("#templates_form").attr("action"), $("#templates_form").serialize(), null, "script");
   });
 <% end %>
