@@ -26,7 +26,7 @@
     </div>
     <div class="field">
       <%= f.label :description %><br />
-      <%= f.text_area :description %>
+      <%= f.text_area :description, rows: 7, style: "width:#{width}" %>
     </div>
     <div class="field">
       <%= f.label :color %><br />
@@ -36,6 +36,10 @@
           <div style="background-color: <%= @choice.color %>"></div>
         </div>
       </div>
+    </div>
+    <div class="field">
+      <%= f.label :included_fields %> <span class="quiet">Comma or Whitespace Separated</span><br />
+      <%= f.text_area :included_fields, rows: 7, style: "width:#{width}" %>
     </div>
   </fieldset>
 
