@@ -27,6 +27,15 @@
   </p>
 
   <p>
+    <b>Included Fields:</b>
+    <ul>
+      <% @choice.fields.each do |field| %>
+        <li><%= field %></li>
+      <% end %>
+    </ul>
+  </p>
+
+  <p>
     <b>Color:</b>
     <span class="choice_bubble" style="background-color: <%= @choice.color %>"><%= @choice.color %></span>
   </p>
